Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.5.1
-
None
-
46ab4476a46dc90ba0d7c7250f52a9df0ff12c0c
Description
https://codereview.qt-project.org/#/c/75879/ was created to address QTCREATORBUG-10846, however this now causes jom to fail when invoked through Chocolatey due to its shimming process (details here: https://github.com/chocolatey/shimgen).
"jom: Can't connect to job server: Cannot determine jobserver name."
Specifically, because it can't find JOMSRVKEY in the environment. Perhaps shimgen does not properly handle environment.
Workarounds have shown up on the net for this issue already: https://github.com/jcfr/qt-easy-build/commit/6366f4275562bdaf4f686838600f46894579c41e
So, do we work around this in jom or file a bug report on shimgen?
Attachments
Issue Links
- replaces
-
QTCREATORBUG-15398 jom: Can't connect to job server: Cannot determine jobserver name.
-
- Closed
-